cmake_minimum_required(VERSION 3.24)
project(LessonsCPP CXX) 

add_subdirectory(ArgMax) 
add_subdirectory(Calendar) 
add_subdirectory(Minesweeper)
add_subdirectory(Palindrome)
add_subdirectory(Password)
add_subdirectory(Permutation)
add_subdirectory(ReverseString)
add_subdirectory(Soundex) 
add_subdirectory(ReverseVector)
add_subdirectory(CommonPrefix)
add_subdirectory(Split)
add_subdirectory(Join)
add_subdirectory(Transpose)